syntax = "proto3";

package user;

import "@googleapis/google/api/annotations.proto";

option go_package = "./user";

service UserService {
    rpc CreateUser(UserRequest) returns (UserResponse) {
        option (google.api.http) = {
            post: "/v1/users"
            body: "*"
        };
    }
    rpc GetUser(GetUserRequest) returns (UserResponse) {
        option (google.api.http) = {
            get: "/v1/users/{user_id}"
        };
    }
    rpc UpdateUser(UpdateUserRequest) returns (UserResponse) {
        option (google.api.http) = {
            put: "/v1/users/{user_id}"
            body: "*"
        };
    }
    rpc DeleteUser(DeleteUserRequest) returns (UserResponse) {
        option (google.api.http) = {
            delete: "/v1/users/{user_id}"
        };
    }
}

message UserRequest {
    string name = 1;
    string email = 2;
}

message GetUserRequest {
    string user_id = 1;
}

message UpdateUserRequest {
    string user_id = 1;
    string name = 2;
    string email = 3;
}

message DeleteUserRequest {
    string user_id = 1;
}

message UserResponse {
    string user_id = 1;
    string name = 2;
    string email = 3;
}
