syntax = "proto3";

package userpb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/fibonachyy/sternx/userpb";


message User {
    string user_id = 1;
    string name = 2;
    string email = 3;
    google.protobuf.Timestamp password_changed_at = 4;
    google.protobuf.Timestamp created_at = 5;
    Role role = 6;
}
enum Role {
    STANDARD = 0;
    ADMIN = 1;
}

message UserResponse {
    User user = 1;
}

message GetUserRequest {
    string user_id = 1;
}

message DeleteUserRequest {
    string email = 1;
}
